--- a/index.html
+++ b/index.html
@@ -38,6 +38,48 @@
             </div>
         </form>
     </div>
+    <main>
+        <div id="jobs-container" class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 id="job-list-title">Veja as nossas vagas em destaque</h2>
+                    <ul id="job-list" class="list-group">
+                        <li class="list-group-item new-job">
+                            <img src="public/images/" alt="Company">
+                            <p>Empresa</p>
+                            <h2>Título da Vaga</h2>
+                            <p>R$2000,00</p>
+                            <span class="new-job-label">Nova</span>
+                            <a href="" class="btn btn-primary">Ver Vaga</a>
+                        </li>
+                        <li class="list-group-item new-job">
+                            <img src="public/images/" alt="Company">
+                            <p>Empresa</p>
+                            <h2>Título da Vaga</h2>
+                            <p>R$2000,00</p>
+                            <span class="new-job-label">Nova</span>
+                            <a href="" class="btn btn-primary">Ver Vaga</a>
+                        </li>
+                        <li class="list-group-item">
+                            <img src="public/images/" alt="Company">
+                            <p>Empresa</p>
+                            <h2>Título da Vaga</h2>
+                            <p>R$2000,00</p>
+                            <a href="" class="btn btn-primary">Ver Vaga</a>
+                        </li>
+                        <li class="list-group-item new-job">
+                            <img src="public/images/" alt="Company">
+                            <p>Empresa</p>
+                            <h2>Título da Vaga</h2>
+                            <p>R$2000,00</p>
+                            <span class="new-job-label">Nova</span>
+                            <a href="" class="btn btn-primary">Ver Vaga</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
